--- a/frontend/templates/frontend/login.html
+++ b/frontend/templates/frontend/login.html
@@ -244,7 +244,6 @@
       cursor:pointer;
       display:flex;
       flex-direction:column;
-      gap: 10px;
       background: transparent;
       border: 0;
       padding: 0;
@@ -257,7 +256,7 @@
       align-items:center;
       justify-content:space-between;
       gap: 12px;
-      padding: 12px;
+      padding: 0px 12px;
       border-radius: 14px;
       background: rgba(0,0,0,.22);
       border: 1px solid rgba(255,255,255,.10);
@@ -445,6 +444,9 @@
                 </div>
 
                 <div class="apple-main">
+                  <div class="apple-left">
+                    <div class="apple-icon"></div>
+                    <div>
                       <div class="apple-title">Apple</div>
                     </div>
                   </div>
