--- a/frontend/templates/frontend/login.html
+++ b/frontend/templates/frontend/login.html
@@ -368,7 +368,7 @@
             {% csrf_token %}
 
             <div>
-              <label class="text-sm text-white/70">Email ou Utilizador</label>
+              <label class="text-sm text-white/70">Utilizador</label>
               <input id="username"
                      name="username"
                      autocomplete="username"
